--- a/form.html
+++ b/form.html
@@ -7,6 +7,20 @@
 	<link href='http://fonts.googleapis.com/css?family=Lobster|Pacifico:400,700,300|Roboto:400,100,100italic,300,300italic,400italic,500italic,500' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,500,600,700,300' rel='stylesheet' type='text/css'>
 		<!--webfonts-->
+
+    <script type="text/javascript">
+      function display_hidden(that)
+      {
+        if(that.value=="NA")
+        {
+          document.getElementById("addr_div").style.display="";
+        }
+        else
+        {
+          document.getElementById("addr_div").style.display="none";
+        }
+      }
+    </script>
 </head>
 
 <body>
@@ -24,27 +38,27 @@
       <h1 style="text-align: center;">General Details</h1>
 
       <ol>
-		    <li>Name: &emsp;&emsp; <input type="text" name="name" size="50">
+		    <li>Name: &emsp;&emsp; <input type="text" name="name" size="50" required>
 
-  		  <li>Roll No.(IITK): &emsp;&emsp;  <input type="number" name="roll_no">
+  		  <li>Roll No.(IITK): &emsp;&emsp;  <input type="number" name="roll_no" required>
 
   		  <li>Gender:
           <table>
           <tr>
-            <td><input type="radio" name="gender" value="M"> Male </td>
+            <td><input type="radio" name="gender" value="M" required> Male </td>
             <td><input type="radio" name="gender" value="F"> Female </td>
             <td><input type="radio" name="gender" value="O"> Others </td>
           </tr>
           </table>
 
-        <li>Contact No:  &emsp;&emsp; <input type="number" name="phone_no" size="10" minlength="10" maxlength="10">
+        <li>Contact No:  &emsp;&emsp; <input type="number" name="phone_no" min="1000000000" max="9999999999" required>
 
-        <li>Age: &emsp;&emsp; <input type="number" name="age" min="18" max="100">
+        <li>Age: &emsp;&emsp; <input type="number" name="age" min="18" max="100" required>
 
         <li>Blood Group:
           <table class="bg">
             <tr>
-              <td><input type="radio" name="blood_group" value="A+"> A+ </td>
+              <td><input type="radio" name="blood_group" value="A+" required> A+ </td>
     		      <td><input type="radio" name="blood_group" value="A-" > A-</td>
             </tr><tr>
               <td><input type="radio" name="blood_group" value="B+" > B+ </td>
@@ -60,15 +74,39 @@
             </tr>
         </table>
 
-        <li>Address: <br><br>
-          <input type="text" name="address" size="100" maxlength="100"><br>
+        <li>Address <br>
+          Room No. / House No.: &emsp; <input type="text" name="address" size="20" maxlength="20" required> &emsp;&emsp;&emsp;&emsp;
+          Hall: &emsp;
+          <select id="hostel" onchange="display_hidden(this)" required>
+            <option selected hidden>Select..</option>
+            <option name="hostel" value="GH1">GH1</option>
+            <option name="hostel" value="H1">Hall 1</option>
+            <option name="hostel" value="H2">Hall 2</option>
+            <option name="hostel" value="H3">Hall 3</option>
+            <option name="hostel" value="H4">Hall 4</option>
+            <option name="hostel" value="H5">Hall 5</option>
+            <option name="hostel" value="GH2">GHT/ GH2</option>
+            <option name="hostel" value="H7">Hall 7</option>
+            <option name="hostel" value="H8">Hall 8</option>
+            <option name="hostel" value="H9">Hall 9</option>
+            <option name="hostel" value="H10">Hall 10</option>
+            <option name="hostel" value="H11">Hall 11</option>
+            <option name="hostel" value="H12">Hall 12</option>
+            <option name="hostel" value="SBRA">RA Residence</option>
+            <option name="hostel" value="FA">Faculty Residence</option>
+            <option name="hostel" value="NA">Other</option>
+          </select>
 
-        <li>Email Id: &emsp;&emsp; <input type="text" name="email">
+          <div id="addr_div" style="display: none">
+            <br>Other: &emsp;&emsp; <input type="text" name="address" size="75" maxlength="100" required>
+          </div>
+
+        <li>Email Id: &emsp;&emsp; <input type="text" name="email" required>
 
         <li>How do you know about this Camp? 
           <table class="tabw_80">
             <tr>
-              <td><input type="radio" name="camp_know" value="Posters"> Posters</td>
+              <td><input type="radio" name="camp_know" value="Posters" required> Posters</td>
               <td><input type="radio" name="camp_know" value="Mail"> Mail</td>
               <td><input type="radio" name="camp_know" value="Friends"> Friends</td>
               <td><input type="radio" name="camp_know" value="Facebook"> Facebook</td>
@@ -90,59 +128,59 @@
       <li>Was your last donation within last three months?
         <table class="tabw_100">
           <tr>
-            <td><input type="radio" name="q2" value="1"> Yes </td>
+            <td><input type="radio" name="q2" value="1" required> Yes </td>
             <td><input type="radio" name="q2" value="2"> No / NA</td>
           </tr>
         </table>
       <li>Did you have any discomfort during last donation?
         <table class="tabw_100">
           <tr>
-            <td><input type="radio" name="q3" value="1"> Yes</td>
+            <td><input type="radio" name="q3" value="1" required> Yes</td>
             <td><input type="radio" name="q3" value="2" > No / NA</td>
           </tr>
         </table>
       <li>Are you feeling well today?
         <table class="tabw_80">
           <tr>
-            <td><input type="radio" name="q4" value="1"> Yes</td>
+            <td><input type="radio" name="q4" value="1" required> Yes</td>
             <td><input type="radio" name="q4" value="2"> No</td>
           </tr>
         </table>
       <li>Did you sleep well last night?
         <table class="tabw_80">
           <tr>
-            <td><input type="radio" name="q5" value="1"> Yes</td>
+            <td><input type="radio" name="q5" value="1" required> Yes</td>
             <td><input type="radio" name="q5" value="2"> No</td>
           </tr>
         </table>
       <li>Have you had anything to eat in last 4 hours?
         <table class="tabw_80">
           <tr>
-            <td><input type="radio" name="q6" value="1"> Yes</td>
+            <td><input type="radio" name="q6" value="1" required> Yes</td>
             <td><input type="radio" name="q6" value="2"> No</td>
           </tr>
         </table>
-      <li>Do you have any reason to believe that you are infected with Hepatitis, Malaria,HIV/AIDS , Veneral Disease?
+      <li>Do you have any reason to believe that you are infected with Hepatitis, Malaria,HIV/AIDS, Veneral Disease?
         <table class="tabw_80">
           <tr>
-            <td><input type="radio" name="q7" value="1"> Yes</td>
+            <td><input type="radio" name="q7" value="1" required> Yes</td>
             <td><input type="radio" name="q7" value="2"> No</td>
           </tr>
         </table>
       <li>In last six months have you had history of any of the following?<br>
-        <input type="radio" name="q8" value="1"> Unexpected Weight Loss<br>
+        <input type="radio" name="q8" value="1" required> Unexpected Weight Loss<br>
         <input type="radio" name="q8" value="2"> Repeated Diarrhea<br>
         <input type="radio" name="q8" value="3"> Continous Cold n Cough<br>
         <input type="radio" name="q8" value="4"> Continous Low Grade Fever<br>
         <input type="radio" name="q8" value="5" > None of the above<br>
       <li>In last six months have you had any of the following?<br>
-        <input type="radio" name="q9" value="1"> Tattooing<br>
+        <input type="radio" name="q9" value="1" required> Tattooing<br>
         <input type="radio" name="q9" value="2"> Ear/Body Piercing<br>
         <input type="radio" name="q9" value="3"> Dental Extraction<br>
         <input type="radio" name="q9" value="4"> Accupuncture<br>
         <input type="radio" name="q9" value="5"> None of the above<br>
       <li>Do you suffer from any of the following diseases?<br>
-        <input type="radio" name="q10" value="1"> Heart/Lung/Kidney Disease<br>
+        <input type="radio" name="q10" value="1" required> Heart/Lung/Kidney Disease<br>
         <input type="radio" name="q10" value="2"> Cancer/Malignant Disease<br>
         <input type="radio" name="q10" value="3"> Malaria/Tuberculosis<br>
         <input type="radio" name="q10" value="4"> Diabetes<br>
@@ -150,26 +188,26 @@
         <input type="radio" name="q10" value="6"> Abnormal Bleeding Tendency/Fainting Spells<br>
         <input type="radio" name="q10" value="7"> None of the above<br>
       <li>Have you had any of the following in last 72 hours?<br>
-        <input type="radio" name="q11" value="1"> Antibiotics/Aspirin/Antiallergy<br>
+        <input type="radio" name="q11" value="1" required> Antibiotics/Aspirin/Antiallergy<br>
         <input type="radio" name="q11" value="2"> Insulins/Steroids/Hormones<br>
         <input type="radio" name="q11" value="3"> Contraceptive/Immunization pills<br>
         <input type="radio" name="q11" value="4"> Vaccination / Rabies Vaccine<br>
         <input type="radio" name="q11" value="5"> Alchohol<br>
         <input type="radio" name="q11" value="6"> None of the above<br>
       <li>Have you had any surgery or Blood Transfusion in past six months?<br>
-        <input type="radio" name="q12" value="1"> Major<br>
+        <input type="radio" name="q12" value="1" required> Major<br>
         <input type="radio" name="q12" value="2"> Minor<br>
         <input type="radio" name="q12" value="3"> Transplant<br>
         <input type="radio" name="q12" value="4"> Transfusion<br>
         <input type="radio" name="q12" value="5"> None of the above<br>
-      <li>For Women Donors only, Is any of the following applicable?<br>
-        <input type="radio" name="q13" value="1"> You are having Menstruations/Periods<br>
+      <li>For Women Donors only, is any of the following applicable?<br>
+        <input type="radio" name="q13" value="1" required> You are having Menstruations/Periods<br>
         <input type="radio" name="q13" value="2"> You are pregnant<br>
         <input type="radio" name="q13" value="3"> You have a baby less than of 18 months<br>
         <input type="radio" name="q13" value="4"> You have had an abortion in last three months<br>
         <input type="radio" name="q13" value="5"> None of the above / Not applicable<br>
       <li>Do you DISAGREE with any of these<br>
-        <input type="radio" name="q14" value="1"> Blood donation is totally voluntary act and no inducement or remuneration has been offered for the same.<br>
+        <input type="radio" name="q14" value="1" required> Blood donation is totally voluntary act and no inducement or remuneration has been offered for the same.<br>
         <input type="radio" name="q14" value="2"> Donation of blood is a medical procedure and that by donating voluntarily, I accept risks involved.<br>
         <input type="radio" name="q14" value="3">My blood will be tested for Hepatitis B and C, malarial parasite, HIV/AIDS and other venereal disease in addition to any other screening to ensure blood safety.<br>
         <input type="radio" name="q14" value="4">I prohibit any information provided by me and donation to be discussed with any other individual or government agency without my prior permission.<br>
